tabs for h2h teams page:

--- a/client/src/stylesheets/Head2HeadTeams.css
+++ b/client/src/stylesheets/Head2HeadTeams.css
@@ -16,13 +16,12 @@
 
 .h2h-go {
     margin-left: 15px;
-    white-space: nowrap;
     background: #2D3138;
     color: white;
     display: inline-block;
-    text-decoration: none;
     line-height: 60px;
     border-radius: 30px;
+    border: none;
     font-size: 24px;
     font-weight: 900;
     padding: 0 25px 0 30px;
@@ -36,4 +35,19 @@
     padding-left: 1%;
     padding-right: 1%;
     font-weight: bolder;
+}
+
+.tab {
+    color:#E25 !important;
+}
+
+h1 {
+    text-align: center;
+}
+
+.runs-plot {
+    position: absolute;
+    right: 0px;
+    top: 180px;
+    float: right;
 }
