--- a/client/src/stylesheets/Head2HeadTeams.css
+++ b/client/src/stylesheets/Head2HeadTeams.css
@@ -51,3 +51,21 @@ h1 {
     top: 180px;
     float: right;
 }
+
+h3 {
+    display: inline;
+}
+
+#t1-name {
+    font-size: 35px;
+    color: blue;
+}
+
+#t2-name {
+    font-size: 35px;
+    color:red;
+}
+
+p {
+    text-align: center;
+}
